test/dynamic/houblix/tests/01.pretty.tests/41-external-definition-1.bad.expected
Line 1, characters 31-31: Error (parsing)
  Syntax error.
