test/dynamic/houblix/tests/01.pretty.tests/41-external-definition-1.bad.hopix
extern print_string : string ->